--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required (VERSION 2.6)
 project (image-io)
 
+if(CMAKE_CXX_COMPILER_ID MATCHES GNU)
+    set(CMAKE_CXX_FLAGS "-std=c++17")
+endif()
+
 include_directories(include)
 
 file(GLOB SOURCES "src/*.cpp")
