Add image creation test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ include_directories(include)
 file(GLOB SOURCES "src/*.cpp")
 
 add_executable(negative ${SOURCES} "test/negative.cpp")
+add_executable(image-creation ${SOURCES} "test/image-creation.cpp")
