Enable the compilation as a library with CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,21 @@
-cmake_minimum_required (VERSION 2.6)
+cmake_minimum_required (VERSION 3.9)
 project (image-io)
 
-if(CMAKE_CXX_COMPILER_ID MATCHES GNU)
-    set(CMAKE_CXX_FLAGS "-std=c++17")
-endif()
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories(include)
+set(CMAKE_CXX_FLAGS "-O4")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wextra")
 
-file(GLOB SOURCES "src/*.cpp")
+set(SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
+set(INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
 
-add_executable(negative ${SOURCES} "test/negative.cpp")
+set(SOURCES ${SOURCE_DIR}/Image.cpp
+            ${SOURCE_DIR}/Decoder.cpp
+            ${SOURCE_DIR}/Encoder.cpp)
+
+add_library(image-io ${SOURCES})
+
+target_include_directories(image-io
+    PUBLIC ${INCLUDE_DIR}
+)
