--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ file(GLOB SOURCES "src/*.cpp")
 
 add_executable(negative ${SOURCES} "test/negative.cpp")
 add_executable(image-creation ${SOURCES} "test/image-creation.cpp")
+add_executable(ppm ${SOURCES} "test/ppm.cpp")
